<resources>
    <string name="app_name">TaoHuo</string>

    <!--框架 By GJ-->
    <string name="tab_home">主页</string>
    <string name="tab_hot">热卖</string>
    <string name="tab_category">分类</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_user">我的</string>
    <string name="actionbar_title1">淘货</string>
    <string name="actionbar_title2"></string>
    <string name="gj_null"></string>
    <string name="gj_user">用户名</string>
    <string name="gj_password">密码</string>
    <string name="gj_login">登录</string>
    <string name="gj_register">注册</string>

    <!--List By GX-->
    <string name="list_title">标题</string>
    <string name="list_headimage">图片</string>
    <string name="list_detailimage">详细信息</string>
    <string name="list_price">价格</string>

    <!--List By GHY-->
    <string name="shop_name">商品名称</string>
    <string name="shop_detail">商品详情</string>
    <string name="shop_collect">收藏</string>
    <string name="shop_add">加入购物车</string>
    <string name="shop_buy">立即购买</string>

    <!--List By HJL-->
    <string name="hjl_null"></string>
    <string name="order_submit">确认支付</string>
    <string name="order_cancel">加入订单</string>
    <string name="order_succeed">购买成功</string>
    <string name="succeed_back">返回</string>
    <string name="orderAddress">收货地址</string>
    <string name="orderSubmit">提交订单</string>
    <string name="orderSucceed">购买成功</string>

    <!--List By WL-->
    <string name="order_bay">再次购买</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
