<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GJ.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/gj_null"
            android:src="@mipmap/brand_128"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/gj_user"
            app:layout_constraintBottom_toBottomOf="@+id/lo_user"
            app:layout_constraintEnd_toStartOf="@+id/lo_user"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lo_user" />

        <EditText
            android:id="@+id/lo_user"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/gj_edit_t_border"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hjl_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/gj_password"
            app:layout_constraintBottom_toBottomOf="@+id/lo_password"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/lo_password" />

        <EditText
            android:id="@+id/lo_password"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gj_edit_t_border"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hjl_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lo_user" />

        <Button
            android:id="@+id/lo_bt_login"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/gj_login"
            android:text="@string/gj_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lo_password" />

        <Button
            android:id="@+id/lo_bt_register"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gj_register"
            android:text="@string/gj_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lo_bt_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>