<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_option"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_headimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/list_headimage"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:text="@string/list_title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/list_price"
                    android:textColor="#F44336"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/order_bay" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>