<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4F4"
    android:textAlignment="center">

    <LinearLayout
        android:id="@+id/LinerLayout4"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/cart_headimage"
            android:layout_width="wrap_content"
            android:layout_height="137dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/list_headimage"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/cart_title"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="TextView"
            tools:text="@string/shop_detail" />

        <TextView
            android:id="@+id/cart_price"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/list_price"
            android:textColor="#F44336"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>