<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hot2_option_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hot_headimage"
            android:layout_width="125dp"
            android:layout_height="148dp"
            android:layout_margin="5dp"
            android:background="#EDEAEA"
            android:contentDescription="@string/list_headimage"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hot_title"
                android:layout_width="259dp"
                android:layout_height="62dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/list_title"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/list_title" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="31dp"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hot_price"
                    android:layout_width="160dp"
                    android:layout_height="39dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/list_price"
                    android:textColor="#F44336"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/hot_button"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:background="#EA2727"
                    android:gravity="center"
                    android:text="@string/shop_buy"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>