<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GJ.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/gj_register"
            android:textColor="#050505"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/gj_user"
            app:layout_constraintBottom_toBottomOf="@+id/re_user"
            app:layout_constraintEnd_toStartOf="@+id/re_user"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/re_user" />

        <EditText
            android:id="@+id/re_user"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/gj_edit_t_border"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hjl_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/gj_password"
            app:layout_constraintBottom_toBottomOf="@+id/re_password"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/re_password" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gj_edit_t_border"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hjl_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_user" />

        <Button
            android:id="@+id/re_bt_register"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/gj_register"
            android:text="@string/gj_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_password" />

        <Button
            android:id="@+id/re_bt_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#00FFFFFF"
            android:text="@string/gj_null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/re_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/gj_null"
            android:textColor="#F44336"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_bt_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>